<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/middle_dist"
    android:paddingLeft="@dimen/large_dist"
    android:paddingRight="@dimen/large_dist"
    android:paddingBottom="@dimen/middle_dist"
    android:background="@color/log_reg_bkg">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_middle"/>
    <LinearLayout
        android:id="@+id/form_container"
        android:layout_below="@id/logo"
        android:layout_marginTop="@dimen/middle_dist"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/phone"
            style="@style/log_reg_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bandage_height"
            android:layout_marginBottom="@dimen/middle_dist"
            android:drawableLeft="@drawable/common_icon_phone"
            android:drawableStart="@drawable/common_icon_phone"
            android:hint="@string/login_hint_phone"
            android:inputType="phone"
            />
        <EditText
            android:id="@+id/password"
            style="@style/log_reg_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bandage_height"
            android:layout_marginBottom="@dimen/middle_dist"
            android:drawableLeft="@drawable/common_icon_pwd"
            android:drawableStart="@drawable/common_icon_pwd"
            android:hint="@string/login_hint_pwd"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/re_password"
            style="@style/log_reg_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bandage_height"
            android:layout_marginBottom="@dimen/middle_dist"
            android:drawableLeft="@drawable/common_icon_pwd"
            android:drawableStart="@drawable/common_icon_pwd"
            android:hint="@string/login_hint_repwd"
            android:inputType="textPassword"/>
        <LinearLayout
            android:id="@+id/auth_code_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/auth_code"
                style="@style/log_reg_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bandage_height"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/small_dist"
                android:layout_marginBottom="@dimen/middle_dist"
                android:hint="@string/register_hint_auth_code"
                android:inputType="textPassword"/>
            <Button
                android:id="@+id/get_auth_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bandage_height"
                android:layout_weight="1"
                android:textSize="@dimen/mini_font"
                android:textColor="@android:color/white"
                android:background="@drawable/common_button_primary"
                android:text="@string/register_ac_get"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bandage_height"
                android:layout_marginRight="@dimen/small_dist"
                android:layout_weight="1"
                android:textSize="@dimen/small_font"
                android:textColor="@android:color/white"
                android:background="@drawable/common_button_blueberry"
                android:text="@string/back"/>
            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bandage_height"
                android:layout_weight="1"
                android:textSize="@dimen/small_font"
                android:textColor="@android:color/white"
                android:background="@drawable/common_button_strawberry"
                android:text="@string/register"/>

        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/login_other_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mini_dist"
        android:padding="@dimen/mini_dist"
        android:layout_below="@+id/form_container"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/forget_pwd"
            style="@style/login_other_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/login_forget_pwd"/>
        <TextView
            android:id="@+id/to_register"
            style="@style/login_other_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/register"/>
    </RelativeLayout>


</RelativeLayout>