<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/middle_dist"
    android:paddingLeft="@dimen/large_dist"
    android:paddingRight="@dimen/large_dist"
    android:paddingBottom="@dimen/middle_dist"
    android:background="@color/log_reg_bkg">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_middle"/>
    <LinearLayout
        android:id="@+id/form_container"
        android:layout_below="@id/logo"
        android:layout_marginTop="@dimen/middle_dist"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/phone"
            style="@style/log_reg_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bandage_height"
            android:layout_marginBottom="@dimen/middle_dist"
            android:drawableLeft="@drawable/common_icon_phone"
            android:drawableStart="@drawable/common_icon_phone"
            android:hint="@string/login_hint_phone"
            android:inputType="phone"
            />
        <EditText
            android:id="@+id/password"
            style="@style/log_reg_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bandage_height"
            android:layout_marginBottom="@dimen/middle_dist"
            android:drawableLeft="@drawable/common_icon_pwd"
            android:drawableStart="@drawable/common_icon_pwd"
            android:hint="@string/login_hint_pwd"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bandage_height"
            android:textSize="@dimen/small_font"
            android:textColor="@android:color/white"
            android:background="@drawable/common_button_primary"
            android:text="@string/login"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/login_other_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mini_dist"
        android:padding="@dimen/mini_dist"
        android:layout_below="@+id/form_container"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/forget_pwd"
            style="@style/login_other_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/login_forget_pwd"/>
        <TextView
            android:id="@+id/to_register"
            style="@style/login_other_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/register"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/third_party_container"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/third_party_hint"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/log_reg_third_party_hint"
            android:layout_marginBottom="@dimen/small_dist"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/app_weixin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/common_icon_qq" />

            <ImageView
                android:id="@+id/app_QQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/common_icon_wechat" />

            <ImageView
                android:id="@+id/app_weibo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/common_icon_weibo" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>